tests/cases/errors/event_named_event_unsupported/main.sv
module Top;
  event e;
  initial begin
    @(e);
  end
endmodule
